--- a/pixel.html
+++ b/pixel.html
@@ -62,7 +62,7 @@
       color: #777;
     }
 
-    /* Price in ₹ */
+    /* Price in $ */
     .price {
       font-size: 22px;
       font-weight: bold;
